--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "create-react-app-lambda",
+  "homepage":"https:/Viv31.github.io/vaibhav-portfolio-react-app.github.io",
   "version": "0.5.0",
   "private": true,
   "dependencies": {
